--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>E-Bookstore</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                           Data base used to keep track of whats in stock and how much stock there is Main functions: To view all currently available books add a new book to the store update the Id, Title, Aurthor or Quantity available of any book remove a book from the store To search the Database for a book SQL used for data base
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Luciano-louis/E-Bookstore">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
