--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
                 <a href="#education">Education</a>
             </li>
             <li>
@@ -143,11 +140,13 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Poised Building manager(SQL version)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        allows you to keep track of bulding projects taken on by the project manager, includes address, completion of the buildin thus far,
+			total cost, amount that has been paid thus far, outstanding amount, due date for project, which contractor and architect is being used
+			as well as all contact details for the customer, architect and contractor, and is stored on a Mysql database
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Luciano-louis/Poised-Building-manager-SQL-version-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
