--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-md-8">
                     <p>
                         Hi, Im Luciano, Louis for short. I am a well driven, passionate, creative problem solver who loves being challenged, I am great at being
-			    resourceful and have a knack at finding solutions as to hoe to make something work. I've been using computers for as long as I can
+			    resourceful and have a knack at finding solutions as to how to make something work. I've been using computers for as long as I can
 			    remember and still own the Windows 95 installation file on a floppy disk, I've recently changed my career path as I stumbled apon a
 			    new found passion for coding. Im looking for a place to call home and become a key part of a team where I can grow myself as a
 			    Software engineer
@@ -86,10 +86,14 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Hyperion Dev</h3>
-            <span class="education-date"2021</span>
+            <span class="education-date">2021</span>
             <h4>Software Engineering boot camp</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+	    	I did a boot camp at Hyperion Dev which allowed me to get a more practical understanding of coding as well as creating a few programs
+		The certifiaction I recieved was:
+		Level 1: Introduction to programing
+		Level 2: Introduction to software engineering
+		Level 3: Data science and advanced algorithems		    
             </p>
         </div>
         <!-- End .education-block -->
