--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="lead-content">
             <h1>Luciano Charles</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/Luciano-louis/devportfolio/raw/master/Luciano%20Charles%20CV%202022.pdf" class="btn-rounded-white">Download My CV</a>
         </div>
         <!-- End #lead-content -->
 
