--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	    
         <div class="education-block">
             <h3>IT Academy</h3>
-            <span class="education-date">2021</span>
+            <span class="education-date">2021 - 2022</span>
             <h4>Software Engineering ITA Certificate</h4>
             <p>
 	    	Certification includes:
@@ -150,7 +150,7 @@
 	    
 	 <div class="education-block">
             <h3>Tattoo Academy</h3>
-            <span class="education-date">2021</span>
+            <span class="education-date">2014</span>
             <h4>SAITA Qualification</h4>
         </div>
         <!-- End .education-block -->
@@ -200,32 +200,16 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>SQL</li>
+            <li>HTML5</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>CSS</li>
+            <li>Software testing</li>
+            <li>MTA</li>
+            <li>Microsoft Azure</li>
+            <li>AWS</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -233,7 +217,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://louisness92@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
