--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, Im Luciano, Louis for short. I am a well driven, passionate, creative problem solver who loves being challenged, I am great at being
+                        Hi, Im Luciano, Louis for short. I am an extremely driven, passionate, creative problem solver who loves being challenged, I am great at being
 			    resourceful and have a knack at finding solutions as to how to make something work. I've been using computers for as long as I can
-			    remember and still own the Windows 95 installation file on a floppy disk, I've recently changed my career path as I stumbled apon a
+			    remember and still own the Windows 95 installation file on a floppy disk, I've recently changed my career path as I stumbled upon a
 			    new found passion for coding. Im looking for a place to call home and become a key part of a team where I can grow myself as a
-			    Software engineer
+			    Software engineer.
                     </p>
                 </div>
             </div>
@@ -97,9 +97,9 @@
             <h4>National certificate in graphic design</h4>
             <p>
 	    	Certifications include:
-		    -Adobe Certified expert:
-		    	-Adobe Dremweaver
-		    	-Adobe Photoshop
+		    -Adobe Certified expert:<br>
+		    	-Adobe Dremweaver<br>
+		    	-Adobe Photoshop<br>
 		    	-Web specialist(HTML)
             </p>
         </div>
@@ -111,9 +111,9 @@
             <h4>Software Engineering boot camp</h4>
             <p>
 	    	I did a boot camp at Hyperion Dev which allowed me to get a more practical understanding of coding as well as creating a few programs
-		The certifiaction I recieved was:
-		Level 1: Introduction to programing
-		Level 2: Introduction to software engineering
+		The certifications I recieved were:<br>
+		Level 1: Introduction to programming<br>
+		Level 2: Introduction to software engineering<br>
 		Level 3: Data science and advanced algorithems		    
             </p>
         </div>
@@ -125,25 +125,25 @@
             <span class="education-date">2021 - 2022</span>
             <h4>Software Engineering ITA Certificate</h4>
             <p>
-	    	Certification includes:
-		    - Course Mastery Certificate
-		    	- Python
-		   	- Mta 98-364 Database fundamentals
-		   	- Mta 98-361 Software Development Fundamentals
-		    	- HTML5
-		    	- 70-761
-		    	- 70-483
-		    	- 70-480
-		    	- 70-357
-		    	- ISTQB Software Testing Fundamentals
-		    	- Developing Solutions for Microsoft Azure AZ-204
-		    	- AZ-900 Microsoft Azure fundamentals
-		    	- AZ-400 Microsoft Azure Devops Solutions
-		    	- AWS Certified developer
-		    	- AWS Certified developer DVA 001
-		    	- 70-487
-		        - 70-486
-		        - 1z0-819 Java SE 11 Developer
+	    	Certifications include:<br>
+		    - Course Mastery Certificate<br>
+		    	- Python<br>
+		   	- Mta 98-364 Database fundamentals<br>
+		   	- Mta 98-361 Software Development Fundamentals<br>
+		    	- HTML5<br>
+		    	- 70-761<br>
+		    	- 70-483<br>
+		    	- 70-480<br>
+		    	- 70-357<br>
+		    	- ISTQB Software Testing Fundamentals<br>
+		    	- Developing Solutions for Microsoft Azure AZ-204<br>
+		    	- AZ-900 Microsoft Azure fundamentals<br>
+		    	- AZ-400 Microsoft Azure Devops Solutions<br>
+		    	- AWS Certified developer<br>
+		    	- AWS Certified developer DVA 001<br>
+		    	- 70-487<br>
+		        - 70-486<br>
+		        - 1z0-819 Java SE 11 Developer<br>
             </p>
         </div>
         <!-- End .education-block -->
