Grammer and spelling fix

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         Hi, Im Luciano, Louis for short. I am an extremely driven, passionate, creative problem solver who loves being challenged, I am great at being
 			    resourceful and have a knack at finding solutions as to how to make something work. I've been using computers for as long as I can
 			    remember and still own the Windows 95 installation file on a floppy disk, I've recently changed my career path as I stumbled upon a
-			    new found passion for coding. Im looking for a place to call home and become a key part of a team where I can grow myself as a
+			    new found passion for coding. Im looking for a place to call home and become a key part of a team where I can grow as a
 			    Software engineer.
                     </p>
                 </div>
@@ -96,11 +96,11 @@
             <span class="education-date">2012 - 2013</span>
             <h4>National certificate in graphic design</h4>
             <p>
-	    	Certifications include:
+	    	Certifications include:<br>
 		    -Adobe Certified expert:<br>
-		    	-Adobe Dremweaver<br>
-		    	-Adobe Photoshop<br>
-		    	-Web specialist(HTML)
+		    -Adobe Dreamweaver<br>
+		    -Adobe Photoshop<br>
+		    -Web specialist(HTML)
             </p>
         </div>
         <!-- End .education-block -->
@@ -110,9 +110,9 @@
             <span class="education-date">2021</span>
             <h4>Software Engineering boot camp</h4>
             <p>
-	    	I did a boot camp at Hyperion Dev which allowed me to get a more practical understanding of coding as well as creating a few programs
-		The certifications I recieved were:<br>
-		Level 1: Introduction to programming<br>
+	    	I completed the boot camp at Hyperion Dev which allowed me to get a more practical understanding of coding as well as creating a few programs
+		The certifications I received were:<br>
+		Level 1: Introduction to programing<br>
 		Level 2: Introduction to software engineering<br>
 		Level 3: Data science and advanced algorithems		    
             </p>
@@ -167,7 +167,12 @@
                     <div class="project-info">
                         <h3>E-Bookstore</h3>
                         <p>
-                           Data base used to keep track of whats in stock and how much stock there is Main functions: To view all currently available books add a new book to the store update the Id, Title, Aurthor or Quantity available of any book remove a book from the store To search the Database for a book SQL used for data base
+                           Database used to keep track of what's in stock and how much stock there is.<br>
+                           Main functions:<ul>To view all currently available books.<ul/>
+                                          <ul>add a new book to the store<ul/>
+                                          <ul>update the I.D, Title, Author or Quantity available of any book.<ul/>
+                                          <ul>Remove a book from the store.<ul/>
+                                          <ul>Search the database for a book SQL used for database<ul/>
                         </p>
                         <a href="https://github.com/Luciano-louis/Ebookstore">View Project</a>
                     </div>
