--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                         <h3>E-Bookstore</h3>
                         <p>
                            Database used to keep track of what's in stock and how much stock there is.<br>
-                           Main functions:<ul>To view all currently available books.<ul/>
-                                          <ul>add a new book to the store<ul/>
-                                          <ul>update the I.D, Title, Author or Quantity available of any book.<ul/>
-                                          <ul>Remove a book from the store.<ul/>
-                                          <ul>Search the database for a book SQL used for database<ul/>
+                           Main functions:To view all currently available books.<br>
+                                          add a new book to the store<br>
+                                          update the I.D, Title, Author or Quantity available of any book.<br>
+                                          Remove a book from the store.<br>
+                                          Search the database for a book SQL used for database.
                         </p>
                         <a href="https://github.com/Luciano-louis/Ebookstore">View Project</a>
                     </div>
