--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
                         <h3>E-Bookstore</h3>
                         <p>
                            Database used to keep track of what's in stock and how much stock there is.<br>
-                           Main functions:To view all currently available books.<br>
+                           Main functions:<br>
+                                          To view all currently available books.<br>
                                           add a new book to the store<br>
                                           update the I.D, Title, Author or Quantity available of any book.<br>
                                           Remove a book from the store.<br>
-                                          Search the database for a book SQL used for database.
+                                          Search the database for a book.<br>
+                                          SQL used for database.
                         </p>
                         <a href="https://github.com/Luciano-louis/Ebookstore">View Project</a>
                     </div>
