--- a/index.html
+++ b/index.html
@@ -190,9 +190,16 @@
                     <div class="project-info">
                         <h3>Poised Building manager(SQL version)</h3>
                         <p>
-                        allows you to keep track of bulding projects taken on by the project manager, includes address, completion of the buildin thus far,
-			total cost, amount that has been paid thus far, outstanding amount, due date for project, which contractor and architect is being used
-			as well as all contact details for the customer, architect and contractor, and is stored on a Mysql database
+                        Allows you to keep track of bulding projects taken on by the project manager.
+                        <br>This includes:
+                        <br>Address, Completion of the building thus far,
+			<br>Total cost
+                        <br>Amount that has been paid thus far
+                        <br>Outstanding amount
+                        <br>Due date for project
+                        <br>Which Contractor and Architect is being used as well as all contact details for the customer
+                        <br>Architect and contractor
+                        <br>All information is stored using a Mysql database
                         </p>
                         <a href="https://github.com/Luciano-louis/Poised-Building-manager-SQL-version-">View Project</a>
                     </div>
