--- a/index.html
+++ b/index.html
@@ -215,9 +215,16 @@
                     <div class="project-info">
                         <h3>Poised Building manager(Information Stored in .txt files)</h3>
                         <p>
-                        allows you to keep track of bulding projects taken on by the project manager, includes address, completion of the buildin thus far,
-			total cost, amount that has been paid thus far, outstanding amount, due date for project, which contractor and architect is being used
-			as well as all contact details for the customer, architect and contractor, and is stored in .txt files
+                        Allows you to keep track of bulding projects taken on by the project manager.
+                        <br>This includes:
+                        <br>Address, Completion of the building thus far,
+			<br>Total cost
+                        <br>Amount that has been paid thus far
+                        <br>Outstanding amount
+                        <br>Due date for project
+                        <br>Which Contractor and Architect is being used as well as all contact details for the customer
+                        <br>Architect and contractor
+                        <br>All information is stored using .txt files
                         </p>
                         <a href="https://github.com/Luciano-louis/Poised-java-final/tree/main/Poised">View Project</a>
                     </div>
@@ -250,8 +257,14 @@
                     <div class="project-info">
                         <h3>Task Manager(Python version)</h3>
                         <p>
-                        A basic task manager with a login that makes use of a text file to store infomation functions include special
-			restrictions only granted to admin user: register user add task view all tasks view my tasks exit statistics
+                        A basic task manager with a login that makes use of a text file to store infomation functions
+                       <br>Includes:
+                       <br>Special restrictions only granted to admin user
+                       <br>register user
+                       <br>add task
+                       <br>view all tasks
+                       <br>view my tasks
+                       <br>exit statistics
                         </p>
                         <a href="https://github.com/Luciano-louis/Task-manager-2">View Project</a>
                     </div>
